--- a/references.bib
+++ b/references.bib
@@ -1182,6 +1182,15 @@
   publisher	= {Pearson Deutschland GmbH}
 }
 
+@misc{frisby2025,
+	title = {{Mostly adequate guide to functional programming}},
+	author = {Lonsdorf, Brian},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 29. Mar. 2025]},
+	url = {https://mostly-adequate.gitbook.io/mostly-adequate-guide}
+}
+
 @article{chen2015,
   title={What may visualization processes optimize?},
   author={Chen, Min and Golan, Amos},
@@ -4012,6 +4021,90 @@
   note		= {[Online; accessed 7. Nov. 2024]},
   url		= {https://www.youtube.com/watch?v=b4p_tcLYDV0}
 }
+
+@article{church1936,
+  title={An unsolvable problem of elementary number theory},
+  author={Church, Alonzo},
+  journal={American journal of mathematics},
+  volume={58},
+  number={2},
+  pages={345--363},
+  year={1936},
+  publisher={JSTOR}
+}
+
+@article{eigenmann1998,
+  title={Von neumann computers},
+  author={Eigenmann, Rudolf and Lilja, David J},
+  journal={Wiley Encyclopedia of Electrical and Electronics Engineering},
+  volume={23},
+  pages={387--400},
+  year={1998},
+  publisher={Wiley}
+}
+
+@article{knuth1970,
+  title={Von Neumann's first computer program},
+  author={Knuth, Donald E},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={2},
+  number={4},
+  pages={247--260},
+  year={1970},
+  publisher={ACM New York, NY, USA}
+}
+
+
+@article{von1993,
+  title={First Draft of a Report on the EDVAC},
+  author={Von Neumann, John},
+  journal={IEEE Annals of the History of Computing},
+  volume={15},
+  number={4},
+  pages={27--75},
+  year={1993},
+  publisher={IEEE}
+}
+
+
+@article{church1940,
+  title={A formulation of the simple theory of types},
+  author={Church, Alonzo},
+  journal={The journal of symbolic logic},
+  volume={5},
+  number={2},
+  pages={56--68},
+  year={1940},
+  publisher={Cambridge University Press}
+}
+
+
+
+@misc{haskell1970,
+	title = {{Haskell Language}},
+	author = {{Haskell.org}},
+	year = {1970},
+	month = jan,
+	note = {[Online; accessed 29. Mar. 2025]},
+	url = {https://www.haskell.org}
+}
+
+@misc{haskell2019,
+	title = {{Monoid - HaskellWiki}},
+	author = {{HaskellWiki}},
+	year = {2019},
+	month = dec,
+	note = {[Online; accessed 29. Mar. 2025]},
+	url = {https://wiki.haskell.org/Monoid}
+}
+
+@book{normand2021,
+  title={Grokking Simplicity: Taming complex software with functional thinking},
+  author={Normand, Eric},
+  year={2021},
+  publisher={Simon and Schuster}
+}
+
 
 @Misc{		  vaneerd2024,
   author	= {Van Eerd, Tony},
